‘Generic Build’ to ‘Generic Info’

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           <select class="control-field filter-field form-control">
             <!--TODO this needs to be created by handlebars-->
             <option value="" selected>All Types</option>
-              <option value="GENERIC BUILD">GENERIC BUILD</option>
+              <option value="GENERIC INFO">GENERIC INFO</option>
               <option value="CROSSTREK">CROSSTREK</option>
               <option value="EA82">EA82</option>
               <option value="EJ22">EJ22</option>
@@ -85,10 +85,10 @@
       <div class="grid">
         <!-- Tiles! -->
 
-          <div style="background-image: url('/static/img/guides/torque.jpg');" class="item h2 w4" data-id="0" data-category="generic build" data-description="" data-title="1985-96 Engine Torque Specs">
+          <div style="background-image: url('/static/img/guides/torque.jpg');" class="item h2 w4" data-id="0" data-category="Generic Info" data-description="" data-title="1985-96 Engine Torque Specs">
 
               <div class="card">
-                <!--<div class="card-id">generic build</div> -->
+                <!--<div class="card-id">Generic Info</div> -->
                 <a href="./detail-page/1985-96-engine-torque-specs.html"> <div class="item-content">
                 <div class="card-title">1985-96 Engine Torque Specs</div>
                 <div class="card-description"></div>
@@ -98,10 +98,10 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/cvgrease.jpg');" class="item h2 w4" data-id="1" data-category="generic build" data-description="" data-title="Advice for Longer CV Joints Life">
+          <div style="background-image: url('/static/img/guides/cvgrease.jpg');" class="item h2 w4" data-id="1" data-category="Generic Info" data-description="" data-title="Advice for Longer CV Joints Life">
 
               <div class="card">
-                <!--<div class="card-id">generic build</div> -->
+                <!--<div class="card-id">Generic Info</div> -->
                 <a href="./detail-page/advice-for-longer-cv-joints-life.html"> <div class="item-content">
                 <div class="card-title">Advice for Longer CV Joints Life</div>
                 <div class="card-description"></div>
@@ -111,7 +111,20 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/overbiteProject.jpg');" class="item h2 w4" data-id="2" data-category="Crosstrek" data-description="" data-title="Bumper Cutting">
+          <div style="background-image: url('/static/img/guides/recovery.jpg');" class="item h2 w4" data-id="2" data-category="Generic Info" data-description="" data-title="Safe Recovery Technique">
+
+              <div class="card">
+                <!--<div class="card-id">Generic Info</div> -->
+                <a href="./detail-page/safe-recovery-technique.html"> <div class="item-content">
+                <div class="card-title">Safe Recovery Technique</div>
+                <div class="card-description"></div>
+                </a>
+                </div>
+              </div>
+
+          </div>
+
+          <div style="background-image: url('/static/img/guides/overbiteProject.jpg');" class="item h2 w4" data-id="3" data-category="Crosstrek" data-description="" data-title="Bumper Cutting">
 
               <div class="card">
                 <!--<div class="card-id">Crosstrek</div> -->
@@ -124,23 +137,10 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/recovery.jpg');" class="item h2 w4" data-id="3" data-category="generic build" data-description="" data-title="Safe Recovery Technique">
+          <div style="background-image: url('/static/img/guides/bendingtube.jpg');" class="item h2 w4" data-id="4" data-category="Generic Info" data-description="pirate4x4 tech" data-title="Tube Bending 101">
 
               <div class="card">
-                <!--<div class="card-id">generic build</div> -->
-                <a href="./detail-page/safe-recovery-technique.html"> <div class="item-content">
-                <div class="card-title">Safe Recovery Technique</div>
-                <div class="card-description"></div>
-                </a>
-                </div>
-              </div>
-
-          </div>
-
-          <div style="background-image: url('/static/img/guides/bendingtube.jpg');" class="item h2 w4" data-id="4" data-category="generic build" data-description="pirate4x4 tech" data-title="Tube Bending 101">
-
-              <div class="card">
-                <!--<div class="card-id">generic build</div> -->
+                <!--<div class="card-id">Generic Info</div> -->
                 <a href="./detail-page/tube-bending-101.html"> <div class="item-content">
                 <div class="card-title">Tube Bending 101</div>
                 <div class="card-description">pirate4x4 tech</div>
@@ -150,23 +150,10 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/foz.jpg');" class="item h2 w4" data-id="5" data-category="generic build" data-description="" data-title="DIY: Swing Away Bumper">
+          <div style="background-image: url('/static/img/guides/subaru-history.jpg');" class="item h2 w4" data-id="5" data-category="Generic Info" data-description="Subaru research and information website" data-title="Cars101.com">
 
               <div class="card">
-                <!--<div class="card-id">generic build</div> -->
-                <a href="./detail-page/diy-swing-away-bumper.html"> <div class="item-content">
-                <div class="card-title">DIY: Swing Away Bumper</div>
-                <div class="card-description"></div>
-                </a>
-                </div>
-              </div>
-
-          </div>
-
-          <div style="background-image: url('/static/img/guides/subaru-history.jpg');" class="item h2 w4" data-id="6" data-category="generic build" data-description="Subaru research and information website" data-title="Cars101.com">
-
-              <div class="card">
-                <!--<div class="card-id">generic build</div> -->
+                <!--<div class="card-id">Generic Info</div> -->
                 <a href="./detail-page/cars101-com.html"> <div class="item-content">
                 <div class="card-title">Cars101.com</div>
                 <div class="card-description">Subaru research and information website</div>
@@ -176,10 +163,23 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/bleepinjeepcbtune.png');" class="item h2 w4" data-id="7" data-category="generic build" data-description="" data-title="VIDEO: How-To Tune a CB Antennae">
+          <div style="background-image: url('/static/img/guides/foz.jpg');" class="item h2 w4" data-id="6" data-category="Generic Info" data-description="" data-title="DIY: Swing Away Bumper">
 
               <div class="card">
-                <!--<div class="card-id">generic build</div> -->
+                <!--<div class="card-id">Generic Info</div> -->
+                <a href="./detail-page/diy-swing-away-bumper.html"> <div class="item-content">
+                <div class="card-title">DIY: Swing Away Bumper</div>
+                <div class="card-description"></div>
+                </a>
+                </div>
+              </div>
+
+          </div>
+
+          <div style="background-image: url('/static/img/guides/bleepinjeepcbtune.png');" class="item h2 w4" data-id="7" data-category="Generic Info" data-description="" data-title="VIDEO: How-To Tune a CB Antennae">
+
+              <div class="card">
+                <!--<div class="card-id">Generic Info</div> -->
                 <a href="./detail-page/video-how-to-tune-a-cb-antennae.html"> <div class="item-content">
                 <div class="card-title">VIDEO: How-To Tune a CB Antennae</div>
                 <div class="card-description"></div>
@@ -215,12 +215,12 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/DonorCar.jpg');" class="item h2 w4" data-id="10" data-category="ea82" data-description="" data-title="Rear e-Brake Retrofit ">
+          <div style="background-image: url('/static/img/guides/ea82suspension.png');" class="item h2 w4" data-id="10" data-category="ea82" data-description="" data-title="Improved Shock Absorbers and Spring Coils On Loyales">
 
               <div class="card">
                 <!--<div class="card-id">ea82</div> -->
-                <a href="./detail-page/rear-e-brake-retrofit.html"> <div class="item-content">
-                <div class="card-title">Rear e-Brake Retrofit </div>
+                <a href="./detail-page/improved-shock-absorbers-and-spring-coils-on-loyales.html"> <div class="item-content">
+                <div class="card-title">Improved Shock Absorbers and Spring Coils On Loyales</div>
                 <div class="card-description"></div>
                 </a>
                 </div>
@@ -228,12 +228,12 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/ea82suspension.png');" class="item h2 w4" data-id="11" data-category="ea82" data-description="" data-title="Improved Shock Absorbers and Spring Coils On Loyales">
+          <div style="background-image: url('/static/img/guides/DonorCar.jpg');" class="item h2 w4" data-id="11" data-category="ea82" data-description="" data-title="Rear e-Brake Retrofit ">
 
               <div class="card">
                 <!--<div class="card-id">ea82</div> -->
-                <a href="./detail-page/improved-shock-absorbers-and-spring-coils-on-loyales.html"> <div class="item-content">
-                <div class="card-title">Improved Shock Absorbers and Spring Coils On Loyales</div>
+                <a href="./detail-page/rear-e-brake-retrofit.html"> <div class="item-content">
+                <div class="card-title">Rear e-Brake Retrofit </div>
                 <div class="card-description"></div>
                 </a>
                 </div>
@@ -267,10 +267,10 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/injectorCleansingProcedure1.jpg');" class="item h2 w4" data-id="14" data-category="generic build" data-description="scrub a dub dub" data-title="Fuel Injector Cleaning">
+          <div style="background-image: url('/static/img/guides/injectorCleansingProcedure1.jpg');" class="item h2 w4" data-id="14" data-category="Generic Info" data-description="scrub a dub dub" data-title="Fuel Injector Cleaning">
 
               <div class="card">
-                <!--<div class="card-id">generic build</div> -->
+                <!--<div class="card-id">Generic Info</div> -->
                 <a href="./detail-page/fuel-injector-cleaning.html"> <div class="item-content">
                 <div class="card-title">Fuel Injector Cleaning</div>
                 <div class="card-description">scrub a dub dub</div>
@@ -280,10 +280,10 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/porting-min.png');" class="item h2 w4" data-id="15" data-category="generic build" data-description="" data-title="DIY Head Porting">
+          <div style="background-image: url('/static/img/guides/porting-min.png');" class="item h2 w4" data-id="15" data-category="Generic Info" data-description="" data-title="DIY Head Porting">
 
               <div class="card">
-                <!--<div class="card-id">generic build</div> -->
+                <!--<div class="card-id">Generic Info</div> -->
                 <a href="./detail-page/diy-head-porting.html"> <div class="item-content">
                 <div class="card-title">DIY Head Porting</div>
                 <div class="card-description"></div>
@@ -293,12 +293,12 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/hitachi-rebuild.png');" class="item h2 w4" data-id="16" data-category="ea82" data-description="" data-title="Hitachi Carb Rebuild">
+          <div style="background-image: url('/static/img/guides/hitachiLinkage.gif');" class="item h2 w4" data-id="16" data-category="ea82" data-description="" data-title="Mechanical Conversion on Hitachi Carbs">
 
               <div class="card">
                 <!--<div class="card-id">ea82</div> -->
-                <a href="./detail-page/hitachi-carb-rebuild.html"> <div class="item-content">
-                <div class="card-title">Hitachi Carb Rebuild</div>
+                <a href="./detail-page/mechanical-conversion-on-hitachi-carbs.html"> <div class="item-content">
+                <div class="card-title">Mechanical Conversion on Hitachi Carbs</div>
                 <div class="card-description"></div>
                 </a>
                 </div>
@@ -306,12 +306,12 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/hitachiLinkage.gif');" class="item h2 w4" data-id="17" data-category="ea82" data-description="" data-title="Mechanical Conversion on Hitachi Carbs">
+          <div style="background-image: url('/static/img/guides/hitachi-rebuild.png');" class="item h2 w4" data-id="17" data-category="ea82" data-description="" data-title="Hitachi Carb Rebuild">
 
               <div class="card">
                 <!--<div class="card-id">ea82</div> -->
-                <a href="./detail-page/mechanical-conversion-on-hitachi-carbs.html"> <div class="item-content">
-                <div class="card-title">Mechanical Conversion on Hitachi Carbs</div>
+                <a href="./detail-page/hitachi-carb-rebuild.html"> <div class="item-content">
+                <div class="card-title">Hitachi Carb Rebuild</div>
                 <div class="card-description"></div>
                 </a>
                 </div>
@@ -345,10 +345,10 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/diffwelding.gif');" class="item h2 w4" data-id="20" data-category="generic build" data-description="" data-title="DIY: Welded Differential">
+          <div style="background-image: url('/static/img/guides/diffwelding.gif');" class="item h2 w4" data-id="20" data-category="Generic Info" data-description="" data-title="DIY: Welded Differential">
 
               <div class="card">
-                <!--<div class="card-id">generic build</div> -->
+                <!--<div class="card-id">Generic Info</div> -->
                 <a href="./detail-page/diy-welded-differential.html"> <div class="item-content">
                 <div class="card-title">DIY: Welded Differential</div>
                 <div class="card-description"></div>
@@ -371,10 +371,10 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/fenderRolling.jpg');" class="item h2 w4" data-id="22" data-category="generic build" data-description="" data-title="DIY Fender Cutting &amp; Rolling">
+          <div style="background-image: url('/static/img/guides/fenderRolling.jpg');" class="item h2 w4" data-id="22" data-category="Generic Info" data-description="" data-title="DIY Fender Cutting &amp; Rolling">
 
               <div class="card">
-                <!--<div class="card-id">generic build</div> -->
+                <!--<div class="card-id">Generic Info</div> -->
                 <a href="./detail-page/diy-fender-cutting-rolling.html"> <div class="item-content">
                 <div class="card-title">DIY Fender Cutting &amp; Rolling</div>
                 <div class="card-description"></div>
@@ -384,10 +384,10 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/notching.jpg');" class="item h2 w4" data-id="23" data-category="generic build" data-description="BillaVista Offroad Tech" data-title="Chopsaw Tube Notching">
+          <div style="background-image: url('/static/img/guides/notching.jpg');" class="item h2 w4" data-id="23" data-category="Generic Info" data-description="BillaVista Offroad Tech" data-title="Chopsaw Tube Notching">
 
               <div class="card">
-                <!--<div class="card-id">generic build</div> -->
+                <!--<div class="card-id">Generic Info</div> -->
                 <a href="./detail-page/chopsaw-tube-notching.html"> <div class="item-content">
                 <div class="card-title">Chopsaw Tube Notching</div>
                 <div class="card-description">BillaVista Offroad Tech</div>
@@ -425,7 +425,7 @@
       <p>LiftedSubarus hereby disclaims any and all liability to any party for any direct, indirect, implied, punitive, special, incidental or other consequential damages arising directly or indirectly from any use of the Video Content, which is provided as is, and without warranties.</p>
     </div>
     <a class="github" href="https://github.com/liftedsubaru/liftedsubarusite">
-      <p >v1-08.12.18-26.00</p>
+      <p >v1-08.14.18-08.01</p>
     </a>
   </footer>
 
