communities + shorter disclaimer

--- a/detail-page/communities.html
+++ b/detail-page/communities.html
@@ -25,10 +25,10 @@
   <meta name="description" content="Curated Offroad Subaru Build Guides.">
   <meta name="Keywords" content="lifted subaru offroad fabrication 4x4">
   <!--  Facebook -->
-  <meta property="og:title" content="  Chopsaw Tube Notching " />
-  <meta property="og:description" content="  BillaVista Offroad Tech " />
+  <meta property="og:title" content="  Communities " />
+  <meta property="og:description" content="  4x4 subaru groups " />
 
-    <meta property="og:image" content="/static/img/guides/notching.jpg" />
+    <meta property="og:image" content="/static/img/guides/mtnroo.png" />
 
 
 </head>
@@ -57,14 +57,13 @@
 
 
     <section class="details">
-        <h1 class="details-headline">Chopsaw Tube Notching</h1>
-         <p class="details-author">by Marc Googer</p>
-          <a href="https://www.pirate4x4.com/tech/billavista/Links/" class="btn grey-background">Link</a>
-          <a href="/static/pdf/techbillavistatubenotching.pdf" class="btn grey-background">PDF Archive</a>
+        <h1 class="details-headline">Communities</h1>
+        
 
         <div class="details-content">
-            <img  src="/static/img/guides/notching.jpg">
-          <p>This write-up is specific for linked suspension building, but Marc is thorough in explaining material selection and the method for notching. For Subaru builds, this is probably the most applicable for bumpers.</p>
+            <img style="display:none"  src="/static/img/guides/mtnroo.png">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/RBiPqtL8e9A" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+          <h3>Forums & Clubs</h3> <p> Get out and meet other nut-jobs offroading their subarus!</p> <section class="list"><table id="listView"><tr><th>Type</th><th>Name</th><th>Description</th><th>Link</th></tr><tr><td>Club</td><td>Mtn Roo</td><td>Offroad subaru group with chapters all over the world</td><td> <a href="https://mtnroo.com/pages/chapters" class="btn grey-background">Link</a></td></tr><tr><td>Club</td><td>NW Washington Offroad</td><td>The video above is of this club on a normal outing. If you live close, go do some serious wheeling with these guys.</td><td> <a href="https://www.facebook.com/nwwashington.offroad" class="btn grey-background">Link</a></td></tr><tr><td>Club</td><td>PNW Offroad</td><td>Oregon Based Offroad Club</td><td> <a href="https://www.facebook.com/groups/464988110341808" class="btn grey-background">Link</a></td></tr><tr><td>Forum</td><td>Ultimate Subaru</td><td>They have TONS of writeups on offroad builds</td><td> <a href="https://www.ultimatesubaru.org/forum/" class="btn grey-background">Link</a></td></tr><tr><td>Forum</td><td>NASIOC</td><td>North American Subaru Impreza Owners Club</td><td><a href="https://forums.nasioc.com/forums/forumdisplay.php" class="btn grey-background">Link</a></td></tr><tr><td>sub-reddit</td><td>r/battlewagon</td><td>Mostly just lifted wagon pics, great source of build inspiration</td><td><a href="https://www.reddit.com/r/battlewagon" class="btn grey-background">Link</a></td></tr></table> </section>
         </div>
     </section>
 
