--- a/index.html
+++ b/index.html
@@ -85,12 +85,12 @@
       <div class="grid">
         <!-- Tiles! -->
 
-          <div style="background-image: url('/static/img/guides/torque.jpg');" class="item h2 w4" data-id="0" data-category="Generic Info" data-description="" data-title="1985-96 Engine Torque Specs">
+          <div style="background-image: url('/static/img/guides/cvgrease.jpg');" class="item h2 w4" data-id="0" data-category="Generic Info" data-description="" data-title="Advice for Longer CV Joints Life">
 
               <div class="card">
                 <!--<div class="card-id">Generic Info</div> -->
-                <a href="./detail-page/1985-96-engine-torque-specs.html"> <div class="item-content">
-                <div class="card-title">1985-96 Engine Torque Specs</div>
+                <a href="./detail-page/advice-for-longer-cv-joints-life.html"> <div class="item-content">
+                <div class="card-title">Advice for Longer CV Joints Life</div>
                 <div class="card-description"></div>
                 </a>
                 </div>
@@ -98,12 +98,12 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/cvgrease.jpg');" class="item h2 w4" data-id="1" data-category="Generic Info" data-description="" data-title="Advice for Longer CV Joints Life">
+          <div style="background-image: url('/static/img/guides/overbiteProject.jpg');" class="item h2 w4" data-id="1" data-category="Crosstrek" data-description="" data-title="Bumper Cutting">
 
               <div class="card">
-                <!--<div class="card-id">Generic Info</div> -->
-                <a href="./detail-page/advice-for-longer-cv-joints-life.html"> <div class="item-content">
-                <div class="card-title">Advice for Longer CV Joints Life</div>
+                <!--<div class="card-id">Crosstrek</div> -->
+                <a href="./detail-page/bumper-cutting.html"> <div class="item-content">
+                <div class="card-title">Bumper Cutting</div>
                 <div class="card-description"></div>
                 </a>
                 </div>
@@ -124,26 +124,26 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/overbiteProject.jpg');" class="item h2 w4" data-id="3" data-category="Crosstrek" data-description="" data-title="Bumper Cutting">
-
-              <div class="card">
-                <!--<div class="card-id">Crosstrek</div> -->
-                <a href="./detail-page/bumper-cutting.html"> <div class="item-content">
-                <div class="card-title">Bumper Cutting</div>
-                <div class="card-description"></div>
-                </a>
-                </div>
-              </div>
-
-          </div>
-
-          <div style="background-image: url('/static/img/guides/bendingtube.jpg');" class="item h2 w4" data-id="4" data-category="Generic Info" data-description="pirate4x4 tech" data-title="Tube Bending 101">
+          <div style="background-image: url('/static/img/guides/bendingtube.jpg');" class="item h2 w4" data-id="3" data-category="Generic Info" data-description="pirate4x4 tech" data-title="Tube Bending 101">
 
               <div class="card">
                 <!--<div class="card-id">Generic Info</div> -->
                 <a href="./detail-page/tube-bending-101.html"> <div class="item-content">
                 <div class="card-title">Tube Bending 101</div>
                 <div class="card-description">pirate4x4 tech</div>
+                </a>
+                </div>
+              </div>
+
+          </div>
+
+          <div style="background-image: url('/static/img/guides/foz.jpg');" class="item h2 w4" data-id="4" data-category="Generic Info" data-description="" data-title="DIY: Swing Away Bumper">
+
+              <div class="card">
+                <!--<div class="card-id">Generic Info</div> -->
+                <a href="./detail-page/diy-swing-away-bumper.html"> <div class="item-content">
+                <div class="card-title">DIY: Swing Away Bumper</div>
+                <div class="card-description"></div>
                 </a>
                 </div>
               </div>
@@ -163,12 +163,12 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/foz.jpg');" class="item h2 w4" data-id="6" data-category="Generic Info" data-description="" data-title="DIY: Swing Away Bumper">
+          <div style="background-image: url('/static/img/guides/bleepinjeepcbtune.png');" class="item h2 w4" data-id="6" data-category="Generic Info" data-description="" data-title="VIDEO: How-To Tune a CB Antennae">
 
               <div class="card">
                 <!--<div class="card-id">Generic Info</div> -->
-                <a href="./detail-page/diy-swing-away-bumper.html"> <div class="item-content">
-                <div class="card-title">DIY: Swing Away Bumper</div>
+                <a href="./detail-page/video-how-to-tune-a-cb-antennae.html"> <div class="item-content">
+                <div class="card-title">VIDEO: How-To Tune a CB Antennae</div>
                 <div class="card-description"></div>
                 </a>
                 </div>
@@ -176,13 +176,13 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/bleepinjeepcbtune.png');" class="item h2 w4" data-id="7" data-category="Generic Info" data-description="" data-title="VIDEO: How-To Tune a CB Antennae">
+          <div style="background-image: url('/static/img/guides/mtnroo.png');" class="item h2 w4" data-id="7" data-category="generic info" data-description="4x4 subaru groups" data-title="Communities">
 
               <div class="card">
-                <!--<div class="card-id">Generic Info</div> -->
-                <a href="./detail-page/video-how-to-tune-a-cb-antennae.html"> <div class="item-content">
-                <div class="card-title">VIDEO: How-To Tune a CB Antennae</div>
-                <div class="card-description"></div>
+                <!--<div class="card-id">generic info</div> -->
+                <a href="./detail-page/communities.html"> <div class="item-content">
+                <div class="card-title">Communities</div>
+                <div class="card-description">4x4 subaru groups</div>
                 </a>
                 </div>
               </div>
@@ -215,12 +215,12 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/ea82suspension.png');" class="item h2 w4" data-id="10" data-category="ea82" data-description="" data-title="Improved Shock Absorbers and Spring Coils On Loyales">
+          <div style="background-image: url('/static/img/guides/DonorCar.jpg');" class="item h2 w4" data-id="10" data-category="ea82" data-description="" data-title="Rear e-Brake Retrofit ">
 
               <div class="card">
                 <!--<div class="card-id">ea82</div> -->
-                <a href="./detail-page/improved-shock-absorbers-and-spring-coils-on-loyales.html"> <div class="item-content">
-                <div class="card-title">Improved Shock Absorbers and Spring Coils On Loyales</div>
+                <a href="./detail-page/rear-e-brake-retrofit.html"> <div class="item-content">
+                <div class="card-title">Rear e-Brake Retrofit </div>
                 <div class="card-description"></div>
                 </a>
                 </div>
@@ -228,12 +228,12 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/DonorCar.jpg');" class="item h2 w4" data-id="11" data-category="ea82" data-description="" data-title="Rear e-Brake Retrofit ">
+          <div style="background-image: url('/static/img/guides/ea82suspension.png');" class="item h2 w4" data-id="11" data-category="ea82" data-description="" data-title="Improved Shock Absorbers and Spring Coils On Loyales">
 
               <div class="card">
                 <!--<div class="card-id">ea82</div> -->
-                <a href="./detail-page/rear-e-brake-retrofit.html"> <div class="item-content">
-                <div class="card-title">Rear e-Brake Retrofit </div>
+                <a href="./detail-page/improved-shock-absorbers-and-spring-coils-on-loyales.html"> <div class="item-content">
+                <div class="card-title">Improved Shock Absorbers and Spring Coils On Loyales</div>
                 <div class="card-description"></div>
                 </a>
                 </div>
@@ -345,26 +345,26 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/diffwelding.gif');" class="item h2 w4" data-id="20" data-category="Generic Info" data-description="" data-title="DIY: Welded Differential">
-
-              <div class="card">
-                <!--<div class="card-id">Generic Info</div> -->
-                <a href="./detail-page/diy-welded-differential.html"> <div class="item-content">
-                <div class="card-title">DIY: Welded Differential</div>
-                <div class="card-description"></div>
-                </a>
-                </div>
-              </div>
-
-          </div>
-
-          <div style="background-image: url('/static/img/guides/thermoswitch.jpg');" class="item h2 w4" data-id="21" data-category="ea82" data-description="Get your electric fan to switch on at a lower temp" data-title="Cooler Thermoswitch">
+          <div style="background-image: url('/static/img/guides/thermoswitch.jpg');" class="item h2 w4" data-id="20" data-category="ea82" data-description="Get your electric fan to switch on at a lower temp" data-title="Cooler Thermoswitch">
 
               <div class="card">
                 <!--<div class="card-id">ea82</div> -->
                 <a href="./detail-page/cooler-thermoswitch.html"> <div class="item-content">
                 <div class="card-title">Cooler Thermoswitch</div>
                 <div class="card-description">Get your electric fan to switch on at a lower temp</div>
+                </a>
+                </div>
+              </div>
+
+          </div>
+
+          <div style="background-image: url('/static/img/guides/diffwelding.gif');" class="item h2 w4" data-id="21" data-category="Generic Info" data-description="" data-title="DIY: Welded Differential">
+
+              <div class="card">
+                <!--<div class="card-id">Generic Info</div> -->
+                <a href="./detail-page/diy-welded-differential.html"> <div class="item-content">
+                <div class="card-title">DIY: Welded Differential</div>
+                <div class="card-description"></div>
                 </a>
                 </div>
               </div>
@@ -384,7 +384,20 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/notching.jpg');" class="item h2 w4" data-id="23" data-category="Generic Info" data-description="BillaVista Offroad Tech" data-title="Chopsaw Tube Notching">
+          <div style="background-image: url('/static/img/guides/torque.jpg');" class="item h2 w4" data-id="23" data-category="Generic Info" data-description="" data-title="1985-96 Engine Torque Specs">
+
+              <div class="card">
+                <!--<div class="card-id">Generic Info</div> -->
+                <a href="./detail-page/1985-96-engine-torque-specs.html"> <div class="item-content">
+                <div class="card-title">1985-96 Engine Torque Specs</div>
+                <div class="card-description"></div>
+                </a>
+                </div>
+              </div>
+
+          </div>
+
+          <div style="background-image: url('/static/img/guides/notching.jpg');" class="item h2 w4" data-id="24" data-category="Generic Info" data-description="BillaVista Offroad Tech" data-title="Chopsaw Tube Notching">
 
               <div class="card">
                 <!--<div class="card-id">Generic Info</div> -->
@@ -397,7 +410,7 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/JesZeK-SubaruEA82AnimatedEngine.gif');" class="item h2 w4" data-id="24" data-category="ea82" data-description="" data-title="Weber Conversion">
+          <div style="background-image: url('/static/img/guides/JesZeK-SubaruEA82AnimatedEngine.gif');" class="item h2 w4" data-id="25" data-category="ea82" data-description="" data-title="Weber Conversion">
 
               <div class="card">
                 <!--<div class="card-id">ea82</div> -->
@@ -421,11 +434,11 @@
     <p style="margin-top:25px;">Found this website helpful?<br><a href="https://www.paypal.me/devgorilla/1" ><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="120" height="20"><linearGradient id="b" x2="0" y2="100%"><stop offset="0" stop-color="#bbb" stop-opacity=".1"/><stop offset="1" stop-opacity=".1"/></linearGradient><clipPath id="a"><rect width="120" height="20" rx="3" fill="#fff"/></clipPath><g clip-path="url(#a)"><path fill="#555" d="M0 0h21v20H0z"/><path fill="#007ec6" d="M21 0h99v20H21z"/><path fill="url(#b)" d="M0 0h120v20H0z"/></g><g fill="#fff" text-anchor="middle" font-family="DejaVu Sans,Verdana,Geneva,sans-serif" font-size="110"><text x="115" y="150" fill="#010101" fill-opacity=".3" transform="scale(.1)" textLength="110">☕</text><text x="115" y="140" transform="scale(.1)" textLength="110">☕</text><text x="695" y="150" fill="#010101" fill-opacity=".3" transform="scale(.1)" textLength="890">Donate a buck</text><text x="695" y="140" transform="scale(.1)" textLength="890">Donate a buck</text></g> </svg></a></p>
     <div id="ad-wrapper"> 320x50</div>
     <div class="disclaimer" >
-      <p><b><i style="color: #9a9a9d;">DISCLAIMER:</i></b> LiftedSubaru.com has not verified the accuracy of the information contained here. The information contained on liftedsubarus.com represents the views and opinions of the original creators of such content and does not necessarily represent the views or opinions of LiftedSubarus.com (LiftedSubarus). The mere appearance of Content on the Site does not constitute an endorsement by LiftedSubarus or its affiliates of such Content.The Content has been made available for informational and educational purposes only. LiftedSubarus does not make any representation or warranties with respect to the accuracy, applicability, fitness, or completeness of the Content. LiftedSubarus does not warrant the performance, effectiveness or applicability of any sites listed or linked to in any Content. The Content is not intended to be a substitute for professional advice, diagnosis, or treatment. Always seek the advice of liscenced mechanic with any questions you may have regarding your vehicle. Never disregard professional advice or delay in seeking it because of something you have read or seen on the Site.</p>
-      <p>LiftedSubarus hereby disclaims any and all liability to any party for any direct, indirect, implied, punitive, special, incidental or other consequential damages arising directly or indirectly from any use of the Video Content, which is provided as is, and without warranties.</p>
+      <p><b><i style="color: #9a9a9d;">DISCLAIMER:</i></b> LiftedSubaru.com has not verified the accuracy of the information contained here. The information contained on liftedsubarus.com represents the views and opinions of the original creators of such content and does not necessarily represent the views or opinions of LiftedSubarus.com (LiftedSubarus). The mere appearance of Content on the Site does not constitute an endorsement by LiftedSubarus or its affiliates of such Content.The Content has been made available for informational and educational purposes only. LiftedSubarus does not make any representation or warranties with respect to the accuracy, applicability, fitness, or completeness of the Content. The Content is not intended to be a substitute for professional advice, diagnosis, or treatment. Always seek the advice of liscenced mechanic with any questions you may have regarding your vehicle. Never disregard professional advice or delay in seeking it because of something you have read or seen on the Site.</p>
+      <p>LiftedSubarus hereby disclaims any and all liability to any party for any direct, indirect, implied, punitive, special, incidental or other consequential damages arising directly or indirectly from any use of the content, which is provided as is, and without warranties.</p>
     </div>
     <a class="github" href="https://github.com/liftedsubaru/liftedsubarusite">
-      <p >v1-08.14.18-08.01</p>
+      <p >v1-08.14.18-00.06</p>
     </a>
   </footer>
 
