--- a/index.html
+++ b/index.html
@@ -189,7 +189,20 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/swapguide-min.png');" class="item h2 w4" data-id="8" data-category="ea82" data-description="Swap guide from Ultimatesubaru" data-title="EA82 to Ej22 Swap Guide">
+          <div style="background-image: url('/static/img/guides/ejIntake.jpg');" class="item h2 w4" data-id="8" data-category="Generic Info" data-description="" data-title="DIY: Intake">
+
+              <div class="card">
+                <!--<div class="card-id">Generic Info</div> -->
+                <a href="./detail-page/diy-intake.html"> <div class="item-content">
+                <div class="card-title">DIY: Intake</div>
+                <div class="card-description"></div>
+                </a>
+                </div>
+              </div>
+
+          </div>
+
+          <div style="background-image: url('/static/img/guides/swapguide-min.png');" class="item h2 w4" data-id="9" data-category="ea82" data-description="Swap guide from Ultimatesubaru" data-title="EA82 to Ej22 Swap Guide">
 
               <div class="card">
                 <!--<div class="card-id">ea82</div> -->
@@ -202,7 +215,7 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/InstrumentClustersAnalog.jpg');" class="item h2 w4" data-id="9" data-category="ea82" data-description="&amp; LED retrofitting" data-title="Dashboard Removal">
+          <div style="background-image: url('/static/img/guides/InstrumentClustersAnalog.jpg');" class="item h2 w4" data-id="10" data-category="ea82" data-description="&amp; LED retrofitting" data-title="Dashboard Removal">
 
               <div class="card">
                 <!--<div class="card-id">ea82</div> -->
@@ -215,7 +228,7 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/DonorCar.jpg');" class="item h2 w4" data-id="10" data-category="ea82" data-description="" data-title="Rear e-Brake Retrofit ">
+          <div style="background-image: url('/static/img/guides/DonorCar.jpg');" class="item h2 w4" data-id="11" data-category="ea82" data-description="" data-title="Rear e-Brake Retrofit ">
 
               <div class="card">
                 <!--<div class="card-id">ea82</div> -->
@@ -228,7 +241,7 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/ea82suspension.png');" class="item h2 w4" data-id="11" data-category="ea82" data-description="" data-title="Improved Shock Absorbers and Spring Coils On Loyales">
+          <div style="background-image: url('/static/img/guides/ea82suspension.png');" class="item h2 w4" data-id="12" data-category="ea82" data-description="" data-title="Improved Shock Absorbers and Spring Coils On Loyales">
 
               <div class="card">
                 <!--<div class="card-id">ea82</div> -->
@@ -241,7 +254,7 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/soob22overhaul-min.png');" class="item h2 w4" data-id="12" data-category="ej22" data-description="" data-title="End Wrench: EJ22 Overhaul">
+          <div style="background-image: url('/static/img/guides/soob22overhaul-min.png');" class="item h2 w4" data-id="13" data-category="ej22" data-description="" data-title="End Wrench: EJ22 Overhaul">
 
               <div class="card">
                 <!--<div class="card-id">ej22</div> -->
@@ -254,7 +267,7 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/forester-snorkle1.jpg');" class="item h2 w4" data-id="13" data-category="Forester" data-description="" data-title="2nd Gen Forester Snorkle">
+          <div style="background-image: url('/static/img/guides/forester-snorkle1.jpg');" class="item h2 w4" data-id="14" data-category="Forester" data-description="" data-title="2nd Gen Forester Snorkle">
 
               <div class="card">
                 <!--<div class="card-id">Forester</div> -->
@@ -267,7 +280,7 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/injectorCleansingProcedure1.jpg');" class="item h2 w4" data-id="14" data-category="Generic Info" data-description="scrub a dub dub" data-title="Fuel Injector Cleaning">
+          <div style="background-image: url('/static/img/guides/injectorCleansingProcedure1.jpg');" class="item h2 w4" data-id="15" data-category="Generic Info" data-description="scrub a dub dub" data-title="Fuel Injector Cleaning">
 
               <div class="card">
                 <!--<div class="card-id">Generic Info</div> -->
@@ -280,7 +293,7 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/porting-min.png');" class="item h2 w4" data-id="15" data-category="Generic Info" data-description="" data-title="DIY Head Porting">
+          <div style="background-image: url('/static/img/guides/porting-min.png');" class="item h2 w4" data-id="16" data-category="Generic Info" data-description="" data-title="DIY Head Porting">
 
               <div class="card">
                 <!--<div class="card-id">Generic Info</div> -->
@@ -293,7 +306,7 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/hitachiLinkage.gif');" class="item h2 w4" data-id="16" data-category="ea82" data-description="" data-title="Mechanical Conversion on Hitachi Carbs">
+          <div style="background-image: url('/static/img/guides/hitachiLinkage.gif');" class="item h2 w4" data-id="17" data-category="ea82" data-description="" data-title="Mechanical Conversion on Hitachi Carbs">
 
               <div class="card">
                 <!--<div class="card-id">ea82</div> -->
@@ -306,7 +319,7 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/hitachi-rebuild.png');" class="item h2 w4" data-id="17" data-category="ea82" data-description="" data-title="Hitachi Carb Rebuild">
+          <div style="background-image: url('/static/img/guides/hitachi-rebuild.png');" class="item h2 w4" data-id="18" data-category="ea82" data-description="" data-title="Hitachi Carb Rebuild">
 
               <div class="card">
                 <!--<div class="card-id">ea82</div> -->
@@ -319,7 +332,7 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/IgnitionModuleTest.jpg');" class="item h2 w4" data-id="18" data-category="ea82" data-description="" data-title="Ignition Module Testing">
+          <div style="background-image: url('/static/img/guides/IgnitionModuleTest.jpg');" class="item h2 w4" data-id="19" data-category="ea82" data-description="" data-title="Ignition Module Testing">
 
               <div class="card">
                 <!--<div class="card-id">ea82</div> -->
@@ -332,26 +345,13 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/howtokeepyoursubaruAlive.png');" class="item h2 w4" data-id="19" data-category="ea82" data-description="This went out of print a long time ago. Luckily for us Joel Grice digitized it for us!" data-title="How To Keep Your Subaru Alive">
+          <div style="background-image: url('/static/img/guides/howtokeepyoursubaruAlive.png');" class="item h2 w4" data-id="20" data-category="ea82" data-description="This went out of print a long time ago. Luckily for us Joel Grice digitized it for us!" data-title="How To Keep Your Subaru Alive">
 
               <div class="card">
                 <!--<div class="card-id">ea82</div> -->
                 <a href="./detail-page/how-to-keep-your-subaru-alive.html"> <div class="item-content">
                 <div class="card-title">How To Keep Your Subaru Alive</div>
                 <div class="card-description">This went out of print a long time ago. Luckily for us Joel Grice digitized it for us!</div>
-                </a>
-                </div>
-              </div>
-
-          </div>
-
-          <div style="background-image: url('/static/img/guides/thermoswitch.jpg');" class="item h2 w4" data-id="20" data-category="ea82" data-description="Get your electric fan to switch on at a lower temp" data-title="Cooler Thermoswitch">
-
-              <div class="card">
-                <!--<div class="card-id">ea82</div> -->
-                <a href="./detail-page/cooler-thermoswitch.html"> <div class="item-content">
-                <div class="card-title">Cooler Thermoswitch</div>
-                <div class="card-description">Get your electric fan to switch on at a lower temp</div>
                 </a>
                 </div>
               </div>
@@ -371,7 +371,20 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/fenderRolling.jpg');" class="item h2 w4" data-id="22" data-category="Generic Info" data-description="" data-title="DIY Fender Cutting &amp; Rolling">
+          <div style="background-image: url('/static/img/guides/thermoswitch.jpg');" class="item h2 w4" data-id="22" data-category="ea82" data-description="Get your electric fan to switch on at a lower temp" data-title="Cooler Thermoswitch">
+
+              <div class="card">
+                <!--<div class="card-id">ea82</div> -->
+                <a href="./detail-page/cooler-thermoswitch.html"> <div class="item-content">
+                <div class="card-title">Cooler Thermoswitch</div>
+                <div class="card-description">Get your electric fan to switch on at a lower temp</div>
+                </a>
+                </div>
+              </div>
+
+          </div>
+
+          <div style="background-image: url('/static/img/guides/fenderRolling.jpg');" class="item h2 w4" data-id="23" data-category="Generic Info" data-description="" data-title="DIY Fender Cutting &amp; Rolling">
 
               <div class="card">
                 <!--<div class="card-id">Generic Info</div> -->
@@ -384,7 +397,7 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/torque.jpg');" class="item h2 w4" data-id="23" data-category="Generic Info" data-description="" data-title="1985-96 Engine Torque Specs">
+          <div style="background-image: url('/static/img/guides/torque.jpg');" class="item h2 w4" data-id="24" data-category="Generic Info" data-description="" data-title="1985-96 Engine Torque Specs">
 
               <div class="card">
                 <!--<div class="card-id">Generic Info</div> -->
@@ -397,7 +410,7 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/notching.jpg');" class="item h2 w4" data-id="24" data-category="Generic Info" data-description="BillaVista Offroad Tech" data-title="Chopsaw Tube Notching">
+          <div style="background-image: url('/static/img/guides/notching.jpg');" class="item h2 w4" data-id="25" data-category="Generic Info" data-description="BillaVista Offroad Tech" data-title="Chopsaw Tube Notching">
 
               <div class="card">
                 <!--<div class="card-id">Generic Info</div> -->
@@ -410,7 +423,7 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/JesZeK-SubaruEA82AnimatedEngine.gif');" class="item h2 w4" data-id="25" data-category="ea82" data-description="" data-title="Weber Conversion">
+          <div style="background-image: url('/static/img/guides/JesZeK-SubaruEA82AnimatedEngine.gif');" class="item h2 w4" data-id="26" data-category="ea82" data-description="" data-title="Weber Conversion">
 
               <div class="card">
                 <!--<div class="card-id">ea82</div> -->
@@ -438,7 +451,7 @@
       <p>LiftedSubarus hereby disclaims any and all liability to any party for any direct, indirect, implied, punitive, special, incidental or other consequential damages arising directly or indirectly from any use of the content, which is provided as is, and without warranties.</p>
     </div>
     <a class="github" href="https://github.com/liftedsubaru/liftedsubarusite">
-      <p >v1-08.14.18-00.06</p>
+      <p >v1-08.14.18-15.54</p>
     </a>
   </footer>
 
